--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,52 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: black;
+  color: white;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.app-tab, .message-tab, .profile-tab{
+  display: grid;
+  grid-template-columns: 1fr 6fr;
+  
+} 
+
+.app-tab>div , .message-tab>div , .profile-tab>div{
+  border: 1px solid wheat;
+}
+
+.dashboard{
+  height: 100vh;
+  text-decoration: none;
+  color: white;
+  display: grid;
+  grid-template-rows: repeat(10,1fr);
+}
+
+  .title-app{
+    border: 1px solid red;
+    grid-row: 1/3;
+    font-size: 20pt;
+    justify-items: center;
+  }  
+
+  .nav-link{
+  display: grid;
+  grid-template-rows:1fr 1fr 1fr;
+  grid-row: 3/6;
+  border: 1px solid red;
+  font-size: 14pt;
+}
+    .class-link{
+  text-decoration: none;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid red;
 }
