--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
+
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Nunito', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: black;
+  /*background-image: linear-gradient(to bottom right,rgb(25,25,25), black);
+  */
+  background-color: rgb(30,30,30);
   color: white;
 }
 
@@ -27,7 +30,7 @@ code {
 
 
 .app-tab>div , .message-tab>div , .profile-tab>div{
-  border: 1px solid wheat;
+  border-right: 1px solid rgb(60,60,60)
 }
 
 .dashboard{
@@ -39,12 +42,15 @@ code {
 }
 
   .title-app{
-    border: 1px solid red;
+    border: 0px solid red;
     grid-row: 1/3;
-    font-size: 22pt;
+    font-size: 20pt;
     display: flex;
     justify-content: center;
     padding-top: 10%;
+    font-weight: 700;
+    
+    
   }  
 
   .nav-link{
@@ -52,7 +58,7 @@ code {
   grid-template-rows:1fr 1fr 1fr;
   grid-row: 3/6;
   border: 1px solid red;
-  font-size: 14pt;
+  font-size: 12pt;
 }
     .class-link{
   text-decoration: none;
@@ -61,9 +67,16 @@ code {
   align-items: center;
   justify-content: center;
   border: 1px solid red;
+  display: flex;
+  justify-content: flex-start;
+  padding-left: 10%;
+  gap: 10px;
 }
 
 .profile-icon{
   grid-row: 10/11;
   border: 1px solid red;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
