--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ body {
   /*background-image: linear-gradient(to bottom right,rgb(25,25,25), black);
   */
   background-color: rgb(30,30,30);
-  color: white;
+  color: cadetblue;
 }
 
 code {
@@ -37,7 +37,6 @@ code {
 .dashboard{
   height: 100vh;
   text-decoration: none;
-  color: white;
   display: grid;
   grid-template-rows: repeat(10,1fr);
 }
@@ -94,22 +93,35 @@ code {
     .post-form{
       box-shadow: 10px 15px 15px;
       border-radius: 10px;
-      background-color: white;
+      background-color: cadetblue;
       color: black;
       height: 20%;
-      width: 60%;
+      width: 50%;
       margin: 0 auto;
       display: none;
       flex-direction: column;
-      padding-left: 15%;
+      gap: 5%;
+      padding-left: 2%;
+      padding-top: 1%;
       justify-content: center;
     }
 
     #post-text{
       resize: none;
-      width: 80%;
+      width: 95%;
       height: 60%;
+      border: none;
     }
+
+    .post-bottom{
+      display: flex;
+      justify-content: space-between;
+      padding-right: 5%;
+    }
+
+      .publish-icon{
+        cursor: pointer;
+      }
 
 .profile-icon{
   grid-row: 10/11;
