--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,8 @@ code {
   text-decoration: none;
   display: grid;
   grid-template-rows: repeat(10,1fr);
+  position: sticky;
+  top: 0;
 }
 
   .title-app{
@@ -57,7 +59,7 @@ code {
   display: grid;
   grid-template-rows:1fr 1fr 1fr;
   grid-row: 3/6;
-  border: 1px solid red;
+  border: 0px solid red;
   font-size: 12pt;
 }
     .class-link{
@@ -66,24 +68,30 @@ code {
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 1px solid red;
+  border: 0px solid red;
   display: flex;
   justify-content: flex-start;
   padding-left: 10%;
   gap: 10px;
 }
 
+span{
+ 
+}
+
 /*POST FORM */
 .post-cont{
-  border: 1px solid red;
+  border: 0px solid red;
   display: flex;
   align-items: center;
   padding-left: 10%;  
 }
 
   .post-btn{
-    padding: 5px 10px;
+    padding: 5px 8px;
     border-radius: 5px;
+    background-color: white;
+   
   }
 
     #post-label, #post-text{
@@ -92,10 +100,10 @@ code {
 
     .post-form{
       box-shadow: 10px 15px 15px;
-      border-radius: 10px;
+      border-radius: 5px;
       background-color: cadetblue;
       color: black;
-      height: 20%;
+      height: 15%;
       width: 50%;
       margin: 0 auto;
       display: none;
@@ -130,6 +138,7 @@ code {
         height: 5px;
         padding-right: 4%;
         padding-bottom: 2%;
+        cursor: pointer;
       }
 
 .profile-icon{
@@ -145,12 +154,28 @@ code {
  padding: 20px;
  display: flex;
  flex-direction: column;
- gap: 20px;
+ gap: 40px;
 }
 
 .main-content{
   color: white;
   display: flex;
   flex-direction: column;
+  border-top: 1px ridge cadetblue;
+  padding-top: 5px;
   
 }
+
+  .twit-content{
+  }
+
+  .username-content{
+    font-size: 11pt;
+    font-weight: 500;
+    color: cadetblue;
+    padding-bottom: 5px;
+  }
+
+  .date-content{
+    font-size: 8pt;
+  }
