--- a/src/index.css
+++ b/src/index.css
@@ -157,6 +157,17 @@ span{
  gap: 40px;
 }
 
+#new-twit{
+  background-color: cadetblue;
+  color: white;
+  margin-left: 20px;
+  margin-top: 20px;
+  width: 8%;
+  padding: 5px;
+  font-weight: 600;
+  cursor: pointer;
+}
+
 .main-content{
   color: white;
   display: flex;
