--- a/src/index.css
+++ b/src/index.css
@@ -85,6 +85,9 @@ span{
     display: none;
   }
 
+  #lds-roller-dash{
+    
+  }
 
 .profile-icon{
   grid-row: 10/11;
@@ -94,7 +97,6 @@ span{
   align-items: center;
 }
 
-/*POST FORM */
 .post-cont{
   border: 0px solid red;
   display: flex;
@@ -113,20 +115,24 @@ span{
       font-family: 'Nunito', sans-serif;
     }
 
+  /*POST FORM */
+
     .post-form{
       box-shadow: 10px 15px 15px;
       border-radius: 5px;
       background-color: cadetblue;
       color: black;
-      height: 15%;
-      width: 50%;
-      margin: 0 auto;
+      height: 200px;
+      width: 500px;
+      top: 80px;
+      left: 400px;
       display: none;
       flex-direction: column;
       gap: 5%;
       padding-left: 2%;
       padding-top: 1%;
       justify-content: center;
+      position: absolute;
     }
 
     #post-text{
