--- a/src/profile.css
+++ b/src/profile.css
@@ -10,14 +10,18 @@
  }
 
     .profile-head{
-        border: 1px solid white;
+        border: 0px solid white;
         display: grid;
         grid-template-columns: 1fr 5fr;
+        padding-left: 20px;
         
     }
       .profile-side{
         display: grid;
         grid-template-rows: 4fr 1fr;
+        gap: 10px;
+        padding-top: 20px;
+        padding-right: 10px;
       }
         .picture-cont{
             display: flex;
@@ -26,6 +30,7 @@
         }
         #edit-profile{
            width: 40px;
+           height: 30px;
            background-color: cadetblue;
            color: white;
            cursor: pointer;
@@ -35,9 +40,12 @@
             border: 0px solid white;
             display: grid;
             grid-template-rows: 1fr 2fr;
+            border-left: 1px solid rgb(55,55,55);
+            padding-left: 10px;
+            padding-top: 10px;
         }
         .profile-main>div{
-            border: 1px solid red;
+           
         }
          
         
@@ -47,7 +55,7 @@
             }
 
     .profile-body{
-        border: 1px solid white;
+       
     }
 
 
@@ -56,13 +64,14 @@
         display: none;
         margin: 0 auto;
         background-color: cadetblue;
-        width: 40%;
-        height: 40%;
+        width: 400px;
+        height: 400px;
         grid-template-rows: 1fr 2fr 3fr 2fr 1fr;
-        padding: 3%;
+        padding: 2%;
         z-index: 1;
-        position: relative;
-        bottom: 40px;
+        position:absolute;
+        bottom: 150px;
+        right: 600px;
         box-shadow: 5px 10px 10px rgb(15,15,15);
     }
         
