--- a/src/profile.css
+++ b/src/profile.css
@@ -49,8 +49,11 @@
             }
 
             .profile-desc{
-                font-size: 13pt;
+                width: 90%;
+                border-top: 1px solid rgb(55,55,55);
+                font-size: 12pt;
                 color: white;
+                padding-top: 5px;
             }
          
         
