--- a/src/profile.css
+++ b/src/profile.css
@@ -6,7 +6,7 @@
  .profile-page{
     border: 0px solid red;
     display: grid;
-    grid-template-rows: 1fr 6fr;
+    grid-template-rows: 1fr 12fr;
  }
 
     .profile-head{
@@ -14,6 +14,7 @@
         display: grid;
         grid-template-columns: 1fr 5fr;
         padding-left: 20px;
+        max-height: 200px;
         
     }
       .profile-side{
@@ -27,6 +28,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
+           
         }
         #edit-profile{
            width: 40px;
