--- a/src/index.css
+++ b/src/index.css
@@ -193,7 +193,7 @@ span:active {
   display: flex;
   flex-direction: column;
   border-top: 1px ridge cadetblue;
-  padding-top: 5px;
+  padding-top: 10px;
   
 }
 
@@ -205,8 +205,9 @@ span:active {
   
 
   #profPic-content{
-    height: 40px;
-    width: 40px;
+    height: 50px;
+    width: 50px;
+    margin-top: 5px;
   } 
   
   .username-content{
