--- a/src/sidebar.css
+++ b/src/sidebar.css
@@ -1,11 +1,12 @@
 .sidebar{
     padding: 20px;
-    position: sticky;
-    top:0;
+    
+  
 }
 
     .search-bar-cont{
-      
+        position: sticky;
+        top: 20px;
       
     }
     
@@ -27,6 +28,7 @@
         border-radius: 13px;
         padding: 2px;
         font-size: 11pt;
+        color: cadetblue;
     }
 
     #search-btn{
@@ -36,3 +38,22 @@
         color: white;
         background-color: cadetblue;
     }
+        #search-btn>span:hover { color:black}
+
+        .display-result-cont{
+           background-color: white;
+           font-size: 10pt;
+           overflow: auto;
+           height: 250px;
+           display: none;
+           padding: 5px;
+           position: sticky;
+           top: 80px;
+        }
+
+        
+
+            .user-result{
+                color: black;
+                padding-top: 5px;
+            }
