--- a/src/index.css
+++ b/src/index.css
@@ -37,14 +37,20 @@ body {
 
 .app-tab{
   display: grid;
-  grid-template-columns: 1fr 5fr 2fr;
+  grid-template-columns: 1.3fr 5fr 2fr;
 }
 
- .message-tab, .profile-tab{
+ .message-tab{
   display: grid;
-  grid-template-columns: 1fr 7fr;
-  
+  grid-template-columns: 1.3fr 7fr;
 } 
+
+.profile-tab{
+  border: 0px solid red;
+  display: grid;
+  grid-template-columns: 1.3fr 5fr 2fr;
+}
+
 
 
 .app-tab>div , .message-tab>div , .profile-tab>div{
@@ -75,8 +81,8 @@ body {
 
   .nav-link{
   display: grid;
-  grid-template-rows:1fr 1fr 1fr;
-  grid-row: 3/6;
+  grid-template-rows:1fr 1fr 1fr 1fr;
+  grid-row: 3/7;
   border: 0px solid red;
   font-size: 12pt;
 }
@@ -90,10 +96,12 @@ body {
   display: flex;
   justify-content: flex-start;
   padding-left: 10%;
-  gap: 10px;
+  gap: 15px;
+  transition: 0.5s;
 }
   .class-link:hover{
     color: cadetblue;
+    background-color:  rgb(30,30,30);
   }
 
 span:hover{
@@ -210,9 +218,8 @@ span:active {
   color: white;
   display: flex;
   flex-direction: column;
-  border-top: 1px ridge cadetblue;
+  border-top: 1px solid rgb(60,60,60);
   padding-top: 10px;
-  
 }
 
   .row1-content{
@@ -226,6 +233,7 @@ span:active {
     height: 50px;
     width: 50px;
     margin-top: 5px;
+    border-radius: 30px;
   } 
   
   .username-content{
@@ -233,6 +241,7 @@ span:active {
     font-weight: 500;
     color: cadetblue;
     padding: 10px;
+    text-decoration: none;
   }
 
   .twit-content{
@@ -283,7 +292,7 @@ span:active {
         }
     
     #reply-display{
-      display: none;
+      display: block;
       padding-top: 10px;
       padding-left: 10px;
     }
@@ -294,6 +303,7 @@ span:active {
           color: white;
           font-size: 12pt;
           padding-left: 10px;
+          border-left: 1px solid rgb(60,60,60);
         }
         .reply-display-body>div{
           padding-bottom: 5px;
