--- a/src/profile.css
+++ b/src/profile.css
@@ -1,12 +1,9 @@
-.profile-tab{
-    display: grid;
-     grid-template-columns: 1fr 5fr 2fr;
-}
+
 
  .profile-page{
     border: 0px solid red;
     display: grid;
-    grid-template-rows: 1fr 20fr;
+    grid-template-rows: 1fr auto;
  }
 
     .profile-head{
@@ -28,14 +25,18 @@
             display: flex;
             justify-content: center;
             align-items: center;
-           
         }
         #edit-profile{
-           width: 40px;
-           height: 30px;
+           width: 60px;
+           height: 20px;
            background-color: cadetblue;
            color: white;
            cursor: pointer;
+           border-radius: 10px;
+           position: relative;
+           top:5px;
+           margin:  auto; 
+
         }
 
         .profile-main{
@@ -57,7 +58,14 @@
                 color: white;
                 padding-top: 5px;
             }
-         
+            
+            #follow-btn{
+                width: 60px;
+                border-radius: 15px;
+                color: white;
+                background-color: cadetblue;
+                cursor: pointer;
+            }
         
             #profile-pic-prof{
                 width: 125px;
