--- a/src/profile.css
+++ b/src/profile.css
@@ -12,7 +12,7 @@
         grid-template-columns: 1fr 5fr;
         padding-left: 20px;
         max-height: 200px;
-        
+        padding-bottom: 20px;
     }
       .profile-side{
         display: grid;
@@ -70,6 +70,7 @@
             #profile-pic-prof{
                 width: 125px;
                 height: 125px;
+                border-radius: 60px;
             }
 
     .profile-body{
