--- a/src/sidebar.css
+++ b/src/sidebar.css
@@ -110,6 +110,21 @@
             gap: 10px;
             
         }
+
+        @media screen and (max-width: 1100px) {
+            .sidebar-footer{
+            position: absolute;
+            left: 40px;
+            bottom: 120px;
+
+            }
+        }
+
+        @media screen and (max-width: 600px) {
+            .sidebar-footer{
+            position: static;
+            }
+        }
            #github-logo{
             font-size: 24pt;
             color: white;
