--- a/src/sign-page.css
+++ b/src/sign-page.css
@@ -1,6 +1,7 @@
 .sign-page{
 display: flex;
 justify-content: center;
+
 background-image: linear-gradient(to bottom right, black, cadetblue);
 height: 100vh;
 }
@@ -23,6 +24,7 @@ height: 100vh;
         justify-content: center;
         padding-top: 7%;
         font-size: 28pt;
+        color: white;
     }
 
     .username-cont,  .email-cont, .password-cont {
@@ -61,3 +63,10 @@ height: 100vh;
             font-weight: 500;
             color: white;
         }
+
+    @media screen and (max-width: 1100px) {
+        .sign-box{
+            min-width: 250px;
+            max-height: 400px;
+        }
+    }
