--- a/src/sign-page.css
+++ b/src/sign-page.css
@@ -1,30 +1,43 @@
+:root{
+    --black1: rgb(50,50,50);
+    --white: #fef6e4;
+    --green : cadetblue
+}
+
+body{
+    padding: 0;
+}
 .sign-page{
 display: flex;
 justify-content: center;
-
-background-image: linear-gradient(to bottom right, black, cadetblue);
+background-image: linear-gradient(to left top, black, rgb(50,50,50));
 height: 100vh;
 }
 
     .sign-box{
-        border: 1px solid white;
+        
         border-radius: 5px;
         display: grid;
-        grid-template-rows: 3.5fr 1.5fr 1.5fr 1.5fr 1.5fr;
+        grid-template-rows: 4fr 1.5fr 1.5fr 1.5fr 1.5fr;
         margin-top: 10%;
-        width: 30%;
-        aspect-ratio: 1.5;
-        height: 45%;
+        width: 35%;
+        height: 60%;
         box-shadow: 5px 10px 18px black;
         padding-bottom: 3%;
+        background-color: rgb(25,25,25);
+        position: relative;
+        bottom: 50px;
+        
     }
 
     .sign-title{
         display: flex;
         justify-content: center;
-        padding-top: 7%;
-        font-size: 28pt;
-        color: white;
+        font-weight: 600;
+        padding-top: 10%;
+        font-size: 30pt;
+        letter-spacing: 2px;
+        color: cadetblue;
     }
 
     .username-cont,  .email-cont, .password-cont {
@@ -37,9 +50,9 @@ height: 100vh;
     }
 
     .button-cont{
-         border: 0px solid red;
         display: flex;
         justify-content: center;
+        align-items: center;
     }
         .button-wrapper{
             padding: 10px;
@@ -58,10 +71,15 @@ height: 100vh;
             sans-serif;
             padding: 5px 10px;
             border-radius: 10px;
-            border: 1px solid white;
+            border: 1px solid var(--white);
             background-color: cadetblue;
             font-weight: 500;
-            color: white;
+            color: var(--white);
+        }
+
+        #user-username, #user-email, #user-password{
+            background-color: var(--white);
+            padding: 5px;
         }
 
     @media screen and (max-width: 1100px) {
