--- a/src/sidebar.css
+++ b/src/sidebar.css
@@ -11,7 +11,7 @@
     }
     
     .search-title{
-        font-size: 14pt;
+        font-size: 16pt;
         font-weight: 600;
         padding-left: 5px;
     }
@@ -32,11 +32,14 @@
     }
 
     #search-btn{
-        border-radius: 15px;
+        border-radius: 50%;
+        padding: 5px;
         display: flex;
         align-items: center;
         color: white;
         background-color: cadetblue;
+        position: relative;
+        bottom: 3px;
     }
         #search-btn>span:hover { color:black}
 
@@ -108,6 +111,7 @@
             display: flex;
             flex-direction: column;
             gap: 10px;
+            font-size: 14pt;
             
         }
 
