--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
 
+:root{
+  --black1: rgb(50,50,50);
+  --white: white;
+  --basic: white;
+  --green : cadetblue;
+  --bg: rgb(30,30,30);
+  --secondary: #9ca3af;
+}
+
 
 body {
   margin: 0;
@@ -45,6 +54,7 @@ body {
   .app-header{
     display: flex;
     justify-content: space-between;
+    padding-bottom: 10px;
   }
 
  .message-tab{
@@ -61,126 +71,10 @@ body {
 
 
 .app-tab>div , .message-tab>div , .profile-tab>div{
-  border-right: 1px solid rgb(60,60,60)
+
 }
 
-/* DASHBOARD */
-.dashboard{
-  height: 100vh;
-  text-decoration: none;
-  display: grid;
-  grid-template-rows: repeat(10,1fr);
-  position: sticky;
-  top: 0;
-}
 
-  .title-app{
-    border: 0px solid red;
-    grid-row: 1/3;
-    font-size: 26pt;
-    display: flex;
-    justify-content: center;
-    padding-top: 10%;
-    font-weight: 700;
-    cursor: pointer;
-    letter-spacing: 2px;
-  }  
-
-  .nav-link{
-  display: grid;
-  grid-template-rows:1fr 1fr 1fr 1fr;
-  grid-row: 3/7;
-  font-size: 15pt;
-  font-weight: 600;
-}
-
-#span-nav{
-  color: cadetblue;
-}
-    .class-link{
-  text-decoration: none;
-  color: var(--white);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  /* border: 1px solid red; */
-  display: flex;
-  justify-content: flex-start;
-  padding-left: 10%;
-  gap: 15px;
-  transition: 0.5s;
-  margin-right: 20%;
-  margin-left: 5%;
-}
-  .class-link:hover{
-    color: cadetblue;
-    background-color: rgb(50,50,50);
-    border-radius: 40px;
-  }
-
-  #class-link-selected{
-    color: cadetblue;
-    background-color: rgb(50,50,50);
-    border-radius: 40px;
-  }
-
-span:hover{
- color: cadetblue;
-}
-span:active {
-  padding: 1px;
-}
-
-  #profile-pic{
-    width: 50px;
-    height: 50px;
-    display: none;
-    border-radius: 30px;
-  }
-
-  #lds-roller-dash{
-    
-  }
-
-.profile-icon{
-  grid-row: 9/11;
-  margin-top: 20px;
-  border-top: 1px solid rgb(60,60,60);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 50px;
- 
-}
-  #profile-pic{
-    width: 70px;
-    height: 70px;
-    border-radius: 50%;
-    border: 1px solid var(--black1);
-  }
-  .profile-name-dash{
-    font-size: 14pt;
-   
-
-  }
-
-.post-cont{
-  border: 0px solid red;
-  display: flex;
-  align-items: center;
-  padding-left: 10%;  
-}
-
-  .post-btn{
-    padding: 5px 8px;
-    border-radius: 5px;
-    background-color: white;
-   
-  }
-
-    #post-label, #post-text{
-      font-family: 'Nunito', sans-serif;
-    }
 
   /*POST FORM */
 
@@ -228,7 +122,6 @@ span:active {
     }
 
     #load-area{
-      border: 1px solid red;
       width: 180px;
     }
 /* ======= */
@@ -272,7 +165,6 @@ span:active {
 /* APP */
 .content-cont{
  padding: 20px;
- 
  display: flex;
  flex-direction: column;
  gap: 10px;
@@ -281,7 +173,7 @@ span:active {
 #new-twit{
   background-color: cadetblue;
   color: white;
-  margin-left: 20px;
+  margin-left: 30px;
   margin-top: 20px;
   padding: 10px 20px 10px 18px;
   font-weight: 600;
@@ -300,8 +192,8 @@ span:active {
   border-top: 1px solid rgb(60,60,60);
   padding-top: 10px;
   padding-bottom: 10px;
-  padding-left: 5px;
- /*  border: 1px solid red; */
+  padding-left: 15px;
+  font-size: 12pt;
 }
 
   .row1-content{
@@ -312,7 +204,6 @@ span:active {
   }
 
   .row2-content{
-    /* border: 1px solid red; */
     padding-top: 5px;
     padding-left: 5px;
     display: flex;
@@ -331,9 +222,10 @@ span:active {
   
   .username-content{
     font-size: 12pt;
-    font-weight: 500;
+    font-weight: 700;
     color: cadetblue;
-    padding: 10px;
+    padding-left: 5px;
+    padding-top: 5px;
     text-decoration: none;
   }
     .username-content:hover{
