--- a/src/pages/sign-page/sign-page.css
+++ b/src/pages/sign-page/sign-page.css
@@ -1,9 +1,3 @@
-:root{
-    --black1: rgb(50,50,50);
-    --white: #fef6e4;
-    --basic: white;
-    --green : cadetblue
-}
 
 body{
     padding: 0;
@@ -135,11 +129,19 @@ height: 100vh;
             position: fixed;
             bottom: 15px;
             right: 15px;
+            display: flex;
+            color: var(--basic);
+            gap: 10px;
+        }
+        #credits-link{
+            color: var(--basic);
+            
         }
         #user-username, #user-email, #user-password{
             background-color: var(--white);
             padding: 5px;
             border-radius: 8px;
+            width: 200px;
         }
 
     @media screen and (max-width: 1100px) {
