--- a/src/components/dashboard/dashboard.css
+++ b/src/components/dashboard/dashboard.css
@@ -34,7 +34,7 @@
   #span-nav{
     color: cadetblue;
   }
-      .class-link{
+      .class-link, .class-link-newpost{
     text-decoration: none;
     color: var(--white);
     display: flex;
@@ -49,6 +49,8 @@
     margin-right: 20%;
     margin-left: 5%;
   }
+
+
     .class-link:hover{
       color: cadetblue;
       background-color: rgb(50,50,50);
@@ -66,6 +68,24 @@
   span:active {
     padding: 1px;
   }
+
+  #new-twit-cont:hover{
+    
+  }
+  #new-twit{
+   background-color: var(--green);
+   border-radius: 25px;
+   font-size: 14pt;
+   display: grid;
+   place-items: center;
+   width: 200px;
+   height: 50px;
+   cursor: pointer;
+  }
+      #new-twit:hover{
+        color: cadetblue;
+        background-color: white;
+      }
   
     #profile-pic{
       width: 50px;
